# simple-voice-recorder

./: .gitignore  LICENSE  README.md  RELEASE_NOTES_v1.0.0.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
THIRD_PARTY_LICENSES/: lamejs-LICENSE.txt  use-strict-LICENSE.txt
packaging/: README-Portable.txt
scripts/: build-release.ps1  verify-release.ps1
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
